[gd_scene load_steps=4 format=3 uid="uid://dn7fcmnlrc5gn"]

[ext_resource type="Script" path="res://scenes/ui/action_menu.gd" id="1_ebu0k"]
[ext_resource type="PackedScene" uid="uid://c8ormsxg73v8w" path="res://scenes/ui/menu_button.tscn" id="1_gpdg0"]

[sub_resource type="Theme" id="Theme_c6p72"]

[node name="ActionUI" type="Control"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -27.0
offset_right = 36.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = SubResource("Theme_c6p72")
script = ExtResource("1_ebu0k")

[node name="ActionsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -13.5
offset_right = 32.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="AttackButton" parent="ActionsContainer" instance=ExtResource("1_gpdg0")]
layout_mode = 2
text = "Attack"

[node name="AbilitiesButton" parent="ActionsContainer" instance=ExtResource("1_gpdg0")]
layout_mode = 2
text = "Abilities"

[node name="ItemsButton" parent="ActionsContainer" instance=ExtResource("1_gpdg0")]
layout_mode = 2
text = "Items"

[node name="EndTurnButton" parent="ActionsContainer" instance=ExtResource("1_gpdg0")]
layout_mode = 2
text = "End Turn"

[connection signal="pressed" from="ActionsContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="ActionsContainer/AbilitiesButton" to="." method="_on_abilities_button_pressed"]
[connection signal="pressed" from="ActionsContainer/ItemsButton" to="." method="_on_items_button_pressed"]
[connection signal="pressed" from="ActionsContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
